# huisChecker

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs-shared/: agent-workflow.md  architecture.md  decisions.md  external_software_references.md
src/huisChecker/: __main__.py  config.py  db.py  scope.py
src/huisChecker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/huisChecker/address/: __init__.py  cache.py  pdok.py  preview.py  search.py
src/huisChecker/analytics/: store.py
src/huisChecker/app/: main.py
src/huisChecker/app/routes/: address.py  checkout.py  explore.py  home.py  map.py  methodology.py  report.py
src/huisChecker/app/static/: map.css  map.js  style.css
src/huisChecker/contracts/: __init__.py  entities.py  identifiers.py  metrics.py
src/huisChecker/email/: sender.py
src/huisChecker/etl/: __init__.py  base.py  cli.py  geometry_stubs.py  io.py  manifest.py  pipeline.py  scope_cli.py  validation.py
src/huisChecker/explore/: __init__.py  service.py
src/huisChecker/layers/: __init__.py  definitions.py  service.py  styling.py
src/huisChecker/payment/: mollie.py  store.py  token.py
src/huisChecker/remote/: __init__.py  bag.py  cache.py  cbs.py  klimaat.py  leefbaarometer.py  politie.py
src/huisChecker/report/: __init__.py  builder.py  modules.py
tests/: conftest.py  test_address_preview.py  test_address_search.py  test_contracts.py  test_etl.py  test_layers.py  test_map_routes.py  test_payment.py  test_report_builder.py  test_report_modules.py  test_smoke.py
(+28 files in other folders)
